k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: corp-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-import
              mountPath: /opt/keycloak/data/import
          # Keycloak takes ~60s to start and import the realm on first boot
          readinessProbe:
            httpGet:
              path: /realms/corp
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /realms/corp
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 5
      volumes:
        - name: realm-import
          configMap:
            name: keycloak-realm
