k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: corp-local
spec:
  selector:
    app: keycloak
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
